# 42sh

./: README.md  meson.build
src/: astruct.h  cd_builtin.c  cd_builtin.h  dot_builtin.c  dot_builtin.h  echo_builtin.c  echo_builtin.h  exe.c  exe.h  exe_cmd.c  exe_cmd.h  export_builtin.c  export_builtin.h  launch.c  launch.h  lexer.c  lexer.h  main.c  main.h  mmalloc.c  mmalloc.h  parser.c  parser.h  parser_two.c  parser_two.h
tests/: tests.c
